Pfade geändert von C://... auf universelle Pfade zu den Ressourcen

--- a/CarpoolingApp/Seiten/Home.html
+++ b/CarpoolingApp/Seiten/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Commute Together</title>
-    <link rel="stylesheet" href="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Stylesheet.css"> <!-- Verlinkung zur externen CSS-Datei -->
+    <link rel="stylesheet" href="../Ressourcen/Stylesheet.css"> <!-- Verlinkung zur externen CSS-Datei -->
 </head>
 <body>
 
@@ -13,18 +13,18 @@
 
 <div class="container">
     <!-- HTL Logo oben mittig -->
-    <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/HTLWYLogo.png" alt="HTL Logo" class="htl-logo">
+    <img src="../Ressourcen/Images/HTLWYLogo.png" alt="HTL Logo" class="htl-logo">
     
     <h1>Commute Together</h1>
     <p class="subtitle">Get to meet new People</p>
-    <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Auto.png" alt="Auto nach links" class="car-image">
+    <img src="../Ressourcen/Images/Auto.png" alt="Auto nach links" class="car-image">
     
     <!-- Der Button ist nun ein Link -->
-    <a href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Seiten\Login.html">
+    <a href="./Login.html">
         <button class="go-button">Let's go!</button>
     </a>
 </div>
 
-<script src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/JavaScript.js"></script> <!-- Verlinkung zur externen JavaScript-Datei -->
+<script src="../Ressourcen/JavaScript.js"></script> <!-- Verlinkung zur externen JavaScript-Datei -->
 </body>
 </html>
