--- a/CarpoolingApp/Seiten/Login.html
+++ b/CarpoolingApp/Seiten/Login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Ressourcen\Stylesheet.css"> <!-- Hier den korrekten Pfad zur CSS-Datei angeben -->
+    <link rel="stylesheet" href="../Ressourcen/Stylesheet.css"> <!-- Hier den korrekten Pfad zur CSS-Datei angeben -->
 </head>
 <body>
 
 <div class="login-container">
     <h1>Login</h1>
 
-    <form action="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Seiten/UserPage.html" method="POST">
+    <form action="./UserPage.html" method="POST">
         <div class="input-field">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="create-account">
-            <a href="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Seiten/Register.html">Kein Konto? Erstellen Sie eines</a>
+            <a href="./Register.html">Kein Konto? Erstellen Sie eines</a>
         </div>
 
         <button type="submit" class="signin-button">Sign In</button>
@@ -31,7 +31,7 @@
 
     <!-- Zurück-Link -->
     <div class="back-link">
-        <a href="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Seiten/Home.html">Zurück zur Startseite</a>
+        <a href="./Home.html">Zurück zur Startseite</a>
     </div>
 </div>
 
