--- a/CarpoolingApp/Seiten/UserPage.html
+++ b/CarpoolingApp/Seiten/UserPage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Startseite</title>
-    <link rel="stylesheet" href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Ressourcen\Stylesheet2.css">
-    <script src="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Ressourcen\JavaScript.js" defer></script>
+    <link rel="stylesheet" href="../Ressourcen/Stylesheet2.css">
+    <script src="../Ressourcen/JavaScript.js" defer></script>
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <!-- Profilbereich oben links -->
     <div class="profile-section">
         <div class="profile-picture">
-            <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="user-img">
+            <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="user-img">
         </div>
         <div class="greeting">
             <h2>Guten Tag, <span id="user-name">Max Mustermann</span></h2>
@@ -36,7 +36,7 @@
         <h3>Kürzliche Aktivitäten</h3>
         <div class="activity">
             <div class="activity-user">
-                <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
+                <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
                 <span class="activity-name">Max Mustermann</span>
             </div>
             <div class="activity-coins">
@@ -46,7 +46,7 @@
         <!-- Weitere Aktivitäten können hier hinzugefügt werden -->
         <div class="activity">
             <div class="activity-user">
-                <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
+                <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
                 <span class="activity-name">Max Mustermann</span>
             </div>
             <div class="activity-coins">
@@ -55,7 +55,7 @@
         </div>
         <div class="activity">
             <div class="activity-user">
-                <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
+                <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
                 <span class="activity-name">Max Mustermann</span>
             </div>
             <div class="activity-coins">
@@ -64,7 +64,7 @@
         </div>
         <div class="activity">
             <div class="activity-user">
-                <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
+                <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
                 <span class="activity-name">Max Mustermann</span>
             </div>
             <div class="activity-coins">
@@ -73,7 +73,7 @@
         </div>
         <div class="activity">
             <div class="activity-user">
-                <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
+                <img src="../Ressourcen/Images/Profile.png" alt="Profilbild" class="activity-img">
                 <span class="activity-name">Max Mustermann</span>
             </div>
             <div class="activity-coins">
@@ -85,13 +85,13 @@
     <!-- Navigationssymbole am unteren Rand -->
     <div class="footer-navigation">
         
-            <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/HomeIcon.png" alt="Home" class="nav-icon">
+            <img src="../Ressourcen/Images/HomeIcon.png" alt="Home" class="nav-icon">
         </a>
-        <a href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Seiten\Overview.html" class="nav-item">
-            <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Search.png" alt="Search" class="nav-icon">
+        <a href="./Overview.html" class="nav-item">
+            <img src="../Ressourcen/Images/Search.png" alt="Search" class="nav-icon">
         </a>
-        <a href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Seiten\Profil.html" class="nav-item">
-            <img src="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Ressourcen/Images/Profile.png" alt="Profile" class="nav-icon">
+        <a href="./Profil.html" class="nav-item">
+            <img src="../Ressourcen/Images/Profile.png" alt="Profile" class="nav-icon">
         </a>
     </div>
 </div>
