--- a/CarpoolingApp/index.html
+++ b/CarpoolingApp/index.html
@@ -1,32 +1,33 @@
+<!-- Vorläüfige Index Seite -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carpooling App</title>
-    <link rel="stylesheet" href="ressourcen/styles/style.css">
+    <link rel="stylesheet" href="./Ressourcen/Stylesheet.css">
 </head>
 <body>
     <header>
         <h1>Willkommen bei der Carpooling App</h1>
         <nav>
             <ul>
-                <li><a href="/Seiten/Home.html">Start</a></li>
-                <li><a href="/Seiten/Login.html">Login</a></li>
-                <li><a href="/Seiten/Register.html">Registrierung</a></li>
-                <li><a href="/Seiten/Carpooling.html">Profil</a></li>
-                <li><a href="/Seiten/CreateDrive.html">Rangliste</a></li>
-                <li><a href="/Seiten/EditPage1.html">Meine Fahrten</a></li>
-                <li><a href="/Seiten/EditPage2.html">Mitfahrgelegenheiten</a></li>
-                <li><a href="/Seiten/JoinDrive.html">Anfragen</a></li>
-                <li><a href="/Seiten/MyRides.html">Shop</a></li>
-                <li><a href="/Seiten/Overview.html">Fahrten bearbeiten</a></li>
-                <li><a href="/Seiten/Profil.html">Einstellungen</a></li>
-                <li><a href="/Seiten/Ranking.html">Übersicht</a></li>
-                <li><a href="/Seiten/Requests.html">Warenkorb</a></li>
-                <li><a href="/Seiten/Shop.html">Konto</a></li>
-                <li><a href="/Seiten/shopping-cart.html">Zeitmanagement</a></li>
-                <li><a href="/Seiten/UserPage.html">Support</a></li>
+                <li><a href="./Seiten/Home.html">Start</a></li>
+                <li><a href="./Seiten/Login.html">Login</a></li>
+                <li><a href="./Seiten/Register.html">Registrierung</a></li>
+                <li><a href="./Seiten/Carpooling.html">Profil</a></li>
+                <li><a href="./Seiten/CreateDrive.html">Rangliste</a></li>
+                <li><a href="./Seiten/EditPage1.html">Meine Fahrten</a></li>
+                <li><a href="./Seiten/EditPage2.html">Mitfahrgelegenheiten</a></li>
+                <li><a href="./Seiten/JoinDrive.html">Anfragen</a></li>
+                <li><a href="./Seiten/MyRides.html">Shop</a></li>
+                <li><a href="./Seiten/Overview.html">Fahrten bearbeiten</a></li>
+                <li><a href="./Seiten/Profil.html">Einstellungen</a></li>
+                <li><a href="./Seiten/Ranking.html">Übersicht</a></li>
+                <li><a href="./Seiten/Requests.html">Warenkorb</a></li>
+                <li><a href="./Seiten/Shop.html">Konto</a></li>
+                <li><a href="./Seiten/shopping-cart.html">Zeitmanagement</a></li>
+                <li><a href="./Seiten/UserPage.html">Support</a></li>
             </ul>
         </nav>
     </header>
