--- a/CarpoolingApp/Seiten/Register.html
+++ b/CarpoolingApp/Seiten/Register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konto erstellen</title>
-    <link rel="stylesheet" href="C:\Users\julia\Documents\HTL_Waidhofen\ITP\ITP_Carpooling_Service_Students\Carpooling_Service_Students\CarpoolingApp\Ressourcen\Stylesheet.css"> <!-- Hier den korrekten Pfad zur CSS-Datei angeben -->
+    <link rel="stylesheet" href="../Ressourcen/Stylesheet.css"> <!-- Hier den korrekten Pfad zur CSS-Datei angeben -->
 </head>
 <body>
 
@@ -32,7 +32,7 @@
 
     <!-- Zurück-Link -->
     <div class="back-link">
-        <a href="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Seiten/Login.html">Zurück zur Login-Seite</a>
+        <a href="./Login.html">Zurück zur Login-Seite</a>
     </div>
 </div>
 
