Index Seite Design überarbeitet damit der Text besser hervorgehoben wird

--- a/CarpoolingApp/index.html
+++ b/CarpoolingApp/index.html
@@ -7,8 +7,8 @@
     <title>Carpooling App</title>
     <link rel="stylesheet" href="./Ressourcen/Stylesheet.css">
 </head>
-<body>
-    <header>
+<body >
+    <header style="background-color: white; border-radius: 20px; padding: 10px;">
         <h1>Willkommen bei der Carpooling App</h1>
         <nav>
             <ul>
@@ -31,11 +31,11 @@
             </ul>
         </nav>
     </header>
-<main>
+<main style="background-color: white; border-radius: 20px; padding: 10px;">
     <h2>Hier kommt der Seiteninhalt</h2>
 </main>
 
-    <footer>
+    <footer style="background-color: white; border-radius: 20px; padding: 10px;">
         <p>&copy; 2025 Carpooling App</p>
     </footer>
 </body>
