--- a/CarpoolingApp/Seiten/Register.html
+++ b/CarpoolingApp/Seiten/Register.html
@@ -11,7 +11,7 @@
 <div class="register-container">
     <h1>Konto erstellen</h1>
 
-    <form action="C:/Users/julia/Documents/HTL_Waidhofen/ITP/ITP_Carpooling_Service_Students/Carpooling_Service_Students/CarpoolingApp/Seiten/UserPage.html" method="POST">
+    <form action="./UserPage.html" method="POST">
         <div class="input-field">
             <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
