Shoppingcart Icon hinzugefügt

--- a/CarpoolingApp/Seiten/Shop.html
+++ b/CarpoolingApp/Seiten/Shop.html
@@ -133,7 +133,7 @@
                 <h1>Shop</h1>
             </div>
             <a href="shopping-cart.html">
-                <img src="../Ressourcen/Images/shopping-cart.png" alt="Warenkorb" class="cart-icon">
+                <img src="../Ressourcen/Images/shoppingcart.jpg" alt="Warenkorb" class="cart-icon">
             </a>
         </div>
 
