Mitfahrgelegenheiten.html erstellt

--- a/CarpoolingApp/Seiten/Profil.html
+++ b/CarpoolingApp/Seiten/Profil.html
@@ -79,7 +79,7 @@
 
         <div class="button-group">
             <button class="profile-button" onclick="location.href='MyRides.html'">🚗 Meine Fahrten</button>
-            <button class="profile-button" onclick="location.href='JoinDrive.html'">🤝 Mitfahrgelegenheiten</button>
+            <button class="profile-button" onclick="location.href='Mitfahrgelegenheiten.html'">🤝 Mitfahrgelegenheiten</button>
             <button class="profile-button" onclick="location.href='Requests.html'">📩 Anfragen</button>
         </div>
     </div>
