Design für JoinDrive.html geändert

--- a/CarpoolingApp/Seiten/CreateDrive.html
+++ b/CarpoolingApp/Seiten/CreateDrive.html
@@ -116,7 +116,7 @@
     </div>
 
     <button class="button button-primary">Fahrt speichern</button>
-    <button class="button button-secondary" onclick="location.href='Overview.html'">🔙 Zurück zur Übersicht</button>
+    <button class="button button-secondary" onclick="location.href='Overview.html'">Zurück</button>
   </div>
 </body>
 </html>
