--- a/CarpoolingApp/Seiten/Ranking.html
+++ b/CarpoolingApp/Seiten/Ranking.html
@@ -104,6 +104,23 @@
             font-size: 1.05em;
             color: #2c3e50;
         }
+
+        .back-button {
+            display: block;
+            margin: 40px auto 0 auto;
+            padding: 15px 30px;
+            background-color: #e0e0e0;
+            color: #2c3e50;
+            border: none;
+            border-radius: 10px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .back-button:hover {
+            background-color: #c7c7c7;
+        }
     </style>
 </head>
 <body>
@@ -147,6 +164,8 @@
                 </div>
             </div>
         </div>
+
+        <button class="back-button" onclick="location.href='Overview.html'">Zurück</button>
     </div>
 </body>
 </html>
