--- a/CarpoolingApp/Seiten/shopping-cart.html
+++ b/CarpoolingApp/Seiten/shopping-cart.html
@@ -71,6 +71,24 @@
             background-color: #219150;
         }
 
+        .back-button {
+            display: block;
+            margin: 30px auto 0 auto;
+            padding: 15px 30px;
+            background-color: #e0e0e0;
+            color: #2c3e50;
+            border: none;
+            border-radius: 10px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-align: center;
+        }
+
+        .back-button:hover {
+            background-color: #c7c7c7;
+        }
+
         .empty {
             text-align: center;
             color: #7f8c8d;
@@ -91,6 +109,7 @@
         <div id="cart-items"></div>
         <div class="total-price" id="total-price"></div>
         <button class="confirm-button" onclick="confirmOrder()">Bestellung abschicken</button>
+        <button class="back-button" onclick="location.href='Shop.html'">🔙 Zurück zum Shop</button>
     </div>
 
     <script>
