MyRides.html überarbeitet

--- a/CarpoolingApp/Seiten/MyRides.html
+++ b/CarpoolingApp/Seiten/MyRides.html
@@ -81,6 +81,24 @@
             background: #dddddd;
             cursor: default;
         }
+
+        .back-button {
+            display: block;
+            margin: 40px auto 0 auto;
+            padding: 15px 30px;
+            background-color: #e0e0e0;
+            color: #2c3e50;
+            border: none;
+            border-radius: 10px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            text-align: center;
+        }
+
+        .back-button:hover {
+            background-color: #c7c7c7;
+        }
     </style>
 </head>
 <body>
@@ -95,6 +113,9 @@
             <h2>✅ Abgeschlossene Fahrten</h2>
             <div id="closed-rides"></div>
         </div>
+
+        <!-- Zurück-zum-Profil-Button -->
+        <button class="back-button" onclick="location.href='Profil.html'">Zurück</button>
     </div>
 
     <script>
