--- a/CarpoolingApp/Seiten/Shop.html
+++ b/CarpoolingApp/Seiten/Shop.html
@@ -188,7 +188,7 @@
         </div>
 
         <!-- Zurück-Button -->
-        <button class="back-button" onclick="location.href='Overview.html'">🔙 Zurück zur Übersicht</button>
+        <button class="back-button" onclick="location.href='Overview.html'">Zurück</button>
     </div>
 </body>
 </html>
