--- a/CarpoolingApp/Seiten/shopping-cart.html
+++ b/CarpoolingApp/Seiten/shopping-cart.html
@@ -109,7 +109,7 @@
         <div id="cart-items"></div>
         <div class="total-price" id="total-price"></div>
         <button class="confirm-button" onclick="confirmOrder()">Bestellung abschicken</button>
-        <button class="back-button" onclick="location.href='Shop.html'">🔙 Zurück zum Shop</button>
+        <button class="back-button" onclick="location.href='Shop.html'">Zurück</button>
     </div>
 
     <script>
